# inizer

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  inizer-api.c  inizer-api.h  inizer-common.h  inizer-logging.c  inizer-logging.h  inizer-str.c  inizer-str.h  main.c
